--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.1.3",
     "remixicon": "^3.4.0",
     "vue": "^3.3.4",
+    "vue-loading-skeleton": "^2.0.0-beta.1",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
