--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@vueuse/core": "^10.2.0",
+    "axios": "^1.4.0",
     "firebase": "^9.22.2",
     "pinia": "^2.1.3",
     "remixicon": "^3.4.0",
